--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,6 @@ html, body {
   height: 100vh;
   width: 100vw;
   color: white;
-  background-image: url("/images/background.png");
   background-repeat: no-repeat;
   background-size: 100vw 100vh;
 }
@@ -27,6 +26,11 @@ html, body {
   padding: 1vw 1vh;
 }
 
+.icon {
+  max-width: 100%;
+  max-height: 100%;
+}
+
 #body {
     width: 90vw;
     height: 84vh;
@@ -37,17 +41,18 @@ html, body {
 
 #Macros {
     display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: center;
+    flex-flow: column nowrap;
+    justify-content: space-evenly;
     align-items: center;
     width: 90vw;
     height: 42vh;
 }
 
-.Macro {
+.macro {
     display: flex;
-    flex-direction: row;
+    flex-flow: row nowrap;
+    align-items: flex-start;
+    justify-content: space-evenly;
     width: 90vw;
     height: 8.4vh;
     margin-left: auto;
@@ -56,7 +61,7 @@ html, body {
     margin-bottom: 1.05vh;
 }
 
-.MacroButton {
+.macro-button {
     background-color: #FFFFFF;
     border: none;
     color: black;
@@ -71,12 +76,7 @@ html, body {
     box-shadow: 0px 0.6vh 1.2vh -0.4vh #2a2a2a;
 }
 
-.Icon {
-  max-width: 100%;
-  max-height: 100%;
-}
-
-.MacroParameters {
+.macro-parameters {
     display: flex;
     flex-flow: column nowrap;
     align-content: space-around;
@@ -87,20 +87,31 @@ html, body {
     border-radius: 10vw;
 }
 
-.Parameter {
+.parameter {
     margin: auto;
     font-size: 16px;
 }
 
-#ParamCheckBox {
-    margin: auto;
+.date-input {
+    margin-left: 2vw;
+    margin-right: 5vw;
+}
+
+#Tracker {
+  display: flex;
+  flex-flow: column nowrap;
+  margin: auto;
+  height: 31.5vh;
+  width: 100%;
 }
 
 .progress-bar {
     background: #000000;
-    position: relative;
-    margin: auto;
-    height: 5vmin;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2.75vh;
+    margin-bottom: 2.75vh;
+    height: 5vh;
     width: 80vw;
 }
 
@@ -111,7 +122,58 @@ html, body {
     transition: width .2s ease-in;
 }
 
-.date-input {
-    margin-left: 2vw;
-    margin-right: 5vw;
+#KeyLogging {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-evenly;
+  height: 21vh;
+  width: 100%;
+}
+
+#PressedKeys {
+  display: flex;
+  flex-flow: row nowrap;
+  align-content: center;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 0vh auto;
+  height: 5vh;
+  width: 100%;
+  font-size: 2vh;
+  font-weight: bold;
+}
+
+.pressedKey {
+  font-size: 2vh;
+  text-align: center;
+  border-radius: 1vh;
+  background: #3b3e7a;
+  margin: auto 1.5vw;
+}
+
+#KeyLogs {
+  display: flex;
+  flex-flow: column nowrap;
+  align-content: center;
+  justify-content: space-evenly;
+  margin: 0vh auto;
+  height: 12vh;
+  width: 100%;
+  font-size: 2vh;
+}
+
+.key-log {
+  background: #3b3e7a;
+  border-radius: 1vh;
+  display: flex;
+  flex-flow: row nowrap;
+  align-content: space-between;
+  justify-content: space-evenly;
+}
+
+#PlayerButtons {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: flex-start;
+  justify-content: space-evenly;
 }
