--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,8 @@ html, body {
 .macro-button {
     background-color: #FFFFFF;
     border: none;
-    color: black;
+    color: white;
+    font-weight: bold;
     width: 8.4vh;
     height: 8.4vh;
     text-align: center;
@@ -171,9 +172,29 @@ html, body {
   justify-content: space-evenly;
 }
 
+.key-log-cell {
+    width: 33%;
+}
+
 #PlayerButtons {
   display: flex;
   flex-flow: row wrap;
   align-items: flex-start;
   justify-content: space-evenly;
+}
+
+.player-button {
+    background-color: #FFFFFF;
+    border: none;
+    color: black;
+    font-weight: bold;
+    width: 8.4vh;
+    height: 8.4vh;
+    text-align: center;
+    text-decoration: none;
+    font-size: 20px;
+    margin: auto;
+    border-radius: 50%;
+    flex-shrink: 0;
+    box-shadow: 0px 0.6vh 1.2vh -0.4vh #2a2a2a;
 }
