--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 html, body {
   height: 100vh;
   overflow: hidden;
+  font-family: Verdana, Geneva, sans-serif;
 }
 
 .App {
@@ -41,11 +42,13 @@ html, body {
 
 #Macros {
     display: flex;
-    flex-flow: column nowrap;
+    flex-flow: row nowrap;
     justify-content: space-evenly;
     align-items: center;
     width: 90vw;
-    height: 42vh;
+    height: 21vh;
+    margin: 0px auto 0px auto;
+    text-transform: uppercase;
 }
 
 .macro {
@@ -54,48 +57,75 @@ html, body {
     align-items: flex-start;
     justify-content: space-evenly;
     width: 90vw;
-    height: 8.4vh;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 1.05vh;
-    margin-bottom: 1.05vh;
+    height: 18vw;
+    margin: auto;
 }
 
 .macro-button {
     background-color: #FFFFFF;
     border: none;
     color: white;
-    font-weight: bold;
-    width: 8.4vh;
-    height: 8.4vh;
+    width: 15vw;
+    height: 15vw;
     text-align: center;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 1.5vh;
     margin: auto;
     border-radius: 50%;
     flex-shrink: 0;
     box-shadow: 0px 0.6vh 1.2vh -0.4vh #2a2a2a;
 }
 
+#Parameters {
+  width: 90vw;
+  height: 31.5vh;
+  text-align: left;
+}
+
 .macro-parameters {
     display: flex;
     flex-flow: column nowrap;
-    align-content: space-around;
-    height: 100%;
-    width: 65vw;
-    background: #3b3e7a;
+    align-content: space-between;
     margin: auto;
-    border-radius: 10vw;
+    background-color: #b7b7b7;
+}
+
+.parameters-entry {
+  display: flex;
+  flex-flow: row nowrap;
+  align-content: space-around;
+  justify-content: center;
+  width: 100%;
+  margin: 0px auto 0.5vh auto;
+  line-height: 4vh;
+}
+
+.parameter-label {
+    font-size: 16px;
+    width: 40%;
+    background-color: #cacaca;
+    color: #000;
+    text-align: center;
 }
 
 .parameter {
-    margin: auto;
     font-size: 16px;
+    width: 60%;
+    background-color: #fff;
+    display: flex;
+    align-content: center;
 }
 
 .date-input {
-    margin-left: 2vw;
-    margin-right: 5vw;
+    width: 100%;
+    border: none;
+    border-radius: 0px;
+}
+
+.integer-input {
+    width: 100%;
+    border: none;
+    border-radius: 0px;
 }
 
 #Tracker {
