LOTO ID First Pass

--- a/src/App.css
+++ b/src/App.css
@@ -111,7 +111,7 @@ html, body {
     width: 60%;
     background-color: #fff;
     display: flex;
-    align-content: center;
+    justify-content: center;
 }
 
 .date-input {
