--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@ html, body {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-evenly;
-    align-items: center;
+    align-items: flex-start;
     width: 90vw;
     height: 24vh;
     margin: 0px auto 0px auto;
@@ -70,7 +70,11 @@ html, body {
 }
 
 .macro-button-label {
+    display: block;
     font-size: 1.5vh;
+    width: 100%;
+    max-width: 8vh;
+    margin: 1vh 0 0 0;
 }
 
 #Parameters {
@@ -119,12 +123,21 @@ html, body {
     width: 100%;
     border: none;
     border-radius: 0px;
+    font-size: 1.5vh;
 }
 
 .integer-input {
     width: 100%;
     border: none;
     border-radius: 0px;
+    font-size: 1.5vh;
+}
+
+.drop-down-list {
+    width: 100%;
+    border: none;
+    border-radius: 0px;
+    font-size: 1.5vh;
 }
 
 #Tracker {
@@ -232,7 +245,7 @@ html, body {
     cursor: pointer;
 }
 
-#InfoButton {
+.info-button {
   background-color: #FFFFFF;
   color: black;
   width: 100%;
@@ -245,6 +258,10 @@ html, body {
   cursor: pointer;
   margin: 1vh auto 0vh auto;
   font-size: 2vh;
+}
+
+#closeInfoButton {
+  margin: 5% 0vw 0vh 0vw;
 }
 
 .info-overlay {
@@ -260,7 +277,17 @@ html, body {
   bottom: 0;
   background-color: rgba(0,0,0,0.1); /* Black background with opacity */
   z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+}
+
+#infoOverlayOut {
+  position: absolute;
+  width: 100%;
+  height: 100%;
   cursor: pointer; /* Add a pointer on hover */
+}
+
+#infoTextBox {
+  z-index: 3;
 }
 
 .infoSection {
